# gh-tokens-loader

./: .pre-commit-config.yaml  README.md  pyproject.toml
gh_tokens_loader/: __init__.py  tokens.py  types.py
gh_tokens_loader/tests/: __init__.py  conftest.py  test_load_gh_tokens.py
gh_tokens_loader/tests/files/: example-gh-tokens.yaml
